welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: value a is not a member of object String
  String a= litMessage()
         ^BDRBuggle:3: error: not found: value a
  if(a=="R"){
     ^BDRBuggle:7: error: not found: value a
  else if(a=="L"){
          ^BDRBuggle:11: error: not found: value a
  else if(a=="I"){
          ^BDRBuggle:16: error: not found: value a
  else if(a=="A"){
          ^BDRBuggle:19: error: not found: value a
  else if(a=="B"){
          ^BDRBuggle:23: error: not found: value a
  else if(a=="C"){
          ^BDRBuggle:28: error: not found: value a
  else if(a=="Z"){
          ^BDRBuggle:31: error: not found: value a
  else if(a=="Y"){
          ^BDRBuggle:35: error: not found: value a
  else if(a=="X"){
          ^